init/add react-router-dom

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/meteor-mdg-validated-method": "^1.2.10",
     "meteor-node-stubs": "^1.2.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "meteor": {
     "mainModule": {
