--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.15.18",
     "@types/meteor-astronomy": "^2.6.12",
     "@types/meteor-mdg-validated-method": "^1.2.10",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "meteor-node-stubs": "^1.2.9",
     "overlayscrollbars": "^2.8.0",
     "react": "^18.3.1",
