--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "meteor-node-stubs": "^1.2.9",
     "overlayscrollbars": "^2.8.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
