--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/meteor-mdg-validated-method": "^1.2.10",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "lodash": "^4.17.21",
     "meteor-node-stubs": "^1.2.9",
     "overlayscrollbars": "^2.8.0",
     "react": "^18.3.1",
