--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "simple-todos-react",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "meteor run --settings development_secrets.json",
+    "start-nosecrets": "meteor run",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
