--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@types/meteor-astronomy": "^2.6.12",
     "@types/meteor-mdg-validated-method": "^1.2.10",
     "bcrypt": "^5.1.1",
+    "check-password-strength": "^2.0.10",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "meteor-node-stubs": "^1.2.9",
+    "meteor-node-stubs": "^1.2.10",
     "overlayscrollbars": "^2.8.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
