--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
+    "react-share": "^5.1.0",
     "react-toastify": "^10.0.5"
   },
   "meteor": {
